# ridge-regression

./: .flake8  .gitignore  .pylintrc  README.md  Ridge Regression.ipynb  pyproject.toml  setup.cfg  setup.py  tox.ini
.ipynb_checkpoints/: Ridge Regression-checkpoint.ipynb
src/: __init__.py  __main__.py  algorithm.py  datawrangling.py  runner.py  utils.py  version.py
src/data/: data.xlsx
tests/: test_algorithm.py  test_datawrangling.py  test_runner.py  test_utils.py
