[metadata]
name = ridge-reg
description = Ridge regression from scratch to predict housing prices using Boston dataset.
long_description = file: README.md
long_description_content_type = text/markdown
author = Akaash Agarwal
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages = src
include_package_data = True
python_requires = ==3.7.4
install_requires = 
    pandas == 0.25.1
    numpy == 1.17.2
    scikit-learn == 0.21.3
    xlrd == 1.2.0

# [options.packages.find]
# where = src

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
ignore = W503, W504
max-complexity = 10
import-order-style = google
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    venv*/

[MESSAGES CONTROL]
disable=C0103,C0301,R0201,R0801,R0902,R0903,R0904,R0913,W0232,W0511,W0621

[REPORTS]
output-format=colorized
reports=y
include-ids=yes
msg-template='{msg_id}:{line:3d},{column}: {obj}: {msg}'

[coverage:run]
parallel = true
branch = true

[coverage:paths]
source =
    src/

[coverage:report]
skip_covered = false
show_missing = true
fail_under = 85
omit = 
    src/version.py

[yapf]
based_on_style = pep8
column_limit = 100